<Fix> : [Auto Scrollable without showing the scrollbar]

--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
   --primary10 : #24B4A5;
   --primary20 : #8FEDC2;
   --bs-dark: var(--primary);
-  overflow-y: hidden;
+  overflow-y:hidden;
   overflow-x: hidden;
 }
 
@@ -403,4 +403,15 @@ input:checked + .slider:before {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background: rgba(255,255,255,0.5);
+}
+.hidden-scroll {
+  max-height: 500px;  
+  padding-bottom: 50px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  overflow-y: auto;
+ 
+}
+.hidden-scroll::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
